2007-03-24  dima  <dima.exe@gmail.com>

	* rails-ws.el (rails-ws:sentinel-proc): change format of the message
	(rails-ws:start): fixed

	* rails-navigation.el: removed old style goto-* functions

	* rails.el (ruby-mode-hook): bind ruby-toggle-string<>symbol to [C-:] in ruby mode

	* rails-ui.el (rails-minor-mode-map): added [M-S-up] & [M-S-down] hotkeys

	* rails-snippets.el (rails-snippets-menu-list): updated, slit to separate modes

	* rails-ruby.el (ruby-toggle-string<>simbol): created

	* rails-migration-minor-mode.el (rails-migration-minor-mode): created

2007-03-23  dima  <dima.exe@gmail.com>

	* rails.el (ruby-mode-hook): added [C-:] hotkey to easy switch between strings and symbols

	* rails-ruby.el (ruby-toggle-string<>simbol): created

	* rails.el (ruby-mode-hook): added [C-c f] hotkey to popup `major-menu-mode` menu

	* rails-core.el (rails-core:menu-position): created variable
	(rails-core:menu): using `rails-core:menu-position`

	* rails-snippets.el (rails-snippets-menu-list): splited snippets into separate modes

	* rails-navigation.el (rails-nav:goto-fixtures): created

	* rails-core.el (rails-core:fixtures): created

	* rails-view-minor-mode.el (rails-view-minor-mode): cleanup and switch to use
	`rails-controller-layout`, added support mailers

	* rails-unit-test-minor-mode.el (rails-unit-test-minor-mode): added support mailers

	* rails-navigation.el (rails-nav:goto-mailers): created

	* rails-model-layout.el: added support mailers

	* rails-mailer-minor-mode.el: created

	* rails-helper-minor-mode.el: cleanup and switch to use `rails-controller-layout`

	* rails-functional-test-minor-mode.el: cleanup and switch to use
	`rails-controller-layout`, added support mailers

	* rails-core.el: created functions: rails-core:model-exist-p,
	rails-core:mailer-file, rails-core:mailer-p, rails-core:mailers,
	rails-core:current-function-name. Cleanup unsed functions.
	
	* rails-controller-minor-mode.el: cleanup and switch to use `rails-controller-layout`
